src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_success@complex_try_catch_behavior.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_success/complex_try_catch_behavior.lx
---
i: 0
i: 1
i: 2
i: 3
i: 4
caught: runtime error: err: i: 5
finally: j: 1
i: 0
i: 1
i: 2
i: 3
i: 4
caught: runtime error: err: i: 5
finally: j: 2
caught outer: runtime error: err: j: 3
do_stuff(): WILL see (finally)
OK!

