src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_success@for_loop.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_success/for_loop.lx
---
0
1
2
3
4
5
6
7
8
9
10
0
1
2
3
4
5
6
7
8
9
10
a = 1
b = 2
c = 3
a = 1
b = 2
c = 3
OK!

