src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_success@print.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_success/print.lx
---
Hello, World
OK!

