src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_success@truthiness.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_success/truthiness.lx
---
null is truthy?        false
true is truthy?        true
false is truthy?       false
1 is truthy?           true
0 is truthy?           false
1.0 is truthy?         true
0.0 is truthy?         false
"a" is truthy?         true
"" is truthy?          false
[1] is truthy?         true
[] is truthy?          false
{a: 1} is truthy?      true
{} is truthy?          false
(fn(){}) is truthy?    true
(print) is truthy?     true
empty iter is truthy?  true
iter is truthy?        true
OK!

